--- a/index.html
+++ b/index.html
@@ -118,8 +118,15 @@
                             <div class="tab-card">
                                 <div class="card-content hidden-content">
                                     <h3>КОМПЬЮТЕРНЫЕ НАВЫКИ</h3>
-                                    <ul>
-                                        <li>Профессиональный пользователь ПК, C#, C++, 1C, SQL, PhpMyAdmin</li>
+                                    <ul class="skills-list">
+                                        <ul class="skills-list">
+                                            <li>Профессиональный пользователь ПК</li>
+                                            <li>C#</li>
+                                            <li>C++</li>
+                                            <li>1C</li>
+                                            <li>SQL</li>
+                                            <li>PhpMyAdmin</li>
+                                        </ul>
                                     </ul>
                                 </div>
                             </div>
@@ -134,7 +141,7 @@
                 <div class="footer-info">
                     <h3>КОНТАКТЫ</h3>
                     <p>📞 +7 (909) 392-88-18</p>
-                    <p>📧 <a href="mailto:nikolleonova2004@gmail.com">nikolleonova2004@gmail.com</a></p>
+                    <p>📧 <a href="mailto:adeadcommunist@yandex.ru">adeadcommunist@yandex.ru</a></p>
                     <p>📍 г. Волгоград</p>
                 </div>
                 <div class="footer-copyright">
